--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "webpack serve"
+    "start:dev": "webpack serve",
+    "build": "NODE_ENV=production webpack && node print.js"
   },
   "author": "jason",
   "license": "ISC",
@@ -14,15 +15,22 @@
     "@babel/preset-env": "^7.12.1",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.3.0",
     "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
     "markdown-loader": "^6.0.0",
+    "mini-css-extract-plugin": "^1.2.1",
+    "puppeteer": "^5.4.1",
     "sass": "^1.29.0",
     "sass-loader": "^10.0.5",
     "style-loader": "^2.0.0",
     "webpack": "^4.0.0",
     "webpack-cli": "^4.0.0",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1"
   }
 }
