--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "webpack serve",
     "build": "NODE_ENV=production webpack && node print.js",
-    "deploy": "npm run build && cd dist && git add --all && git commmit -m \"Release at ($date)\" && git push origin :gh-pages --force && git subtree push --prefix dist origin gh-pages"
+    "deploy": "npm run build && git push origin :gh-pages --force && git subtree push --prefix dist origin gh-pages"
   },
   "author": "jason",
   "license": "ISC",
